[package]
name = "spawn_pressure"
version = "0.1.0"
authors = ["freesig <tomrgowan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
observability = { version = "0.1.3", default-features = false }
once_cell = "1.5.2"
tokio = { version = "0.2", features = [ "full" ] }
tracing-futures = "0.2.4"
